# FileTransfer

./: .gitignore  README.md
FileTransfer/: CMakeLists.txt  CMakeUserPresets.json  FileMitra.qrc  FileTransfer.cpp  FileTransfer.h  FileTransfer.ui  FileTransferManager.cpp  FileTransferManager.h  LogHandler.h  SignalingClient.cpp  SignalingClient.h  SocketIOClient.cpp  SocketIOClient.h  WebRTCEngine.cpp  WebRTCEngine.h  main.cpp  server.py
FileTransfer/FileTransferPackingProject/: FileTransferPackingProject.assets.cache  FileTransferPackingProject.wapproj  FileTransferPackingProject_TemporaryKey.pfx  Package.appxmanifest
FileTransfer/libdatachannel/lib/Debug/: datachannel.exp
FileTransfer/libdatachannel/lib/Release/: datachannel.exp
